# swarm-tminus

./: .gitignore  AUDIT_v0.2.0.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
swarm_tminus/: __init__.py  campaign.py  casting.py  cli.py  context.py  cron.py  deadlines.py  events.py  hybrid.py  matcher.py  predictor.py  rate.py  tempo.py
tests/: test_campaign.py  test_casting.py  test_context.py  test_cron.py  test_deadlines.py  test_events.py  test_hybrid.py  test_matcher.py  test_predictor.py  test_rate.py  test_tempo.py
